[package]
name = "burst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
argh = "0.1.12"
bincode = "1.3.3"
directories = "5.0.1"
env_logger = "0.11.3"
jwalk = "0.8.1"
log = "0.4.21"
serde = { version = "1.0.204", features = ["derive"] }
ureq = "2.10.0"
zip = "2.1.5"
